Подключены шрифты, сделана разметка всей страницы и формы, стилизована страница без адаптива - подвал, шапка. все секции

--- a/www/index.html
+++ b/www/index.html
@@ -1,73 +1,135 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Мой первый проект</title>
-    <link rel="stylesheet" href="style/style.css" />
-  </head>
-  <body>
 
-    <header class="header">
-      <div class="header-inner">
-        <div class="header-wrap">
-          <a href="index.html" class="header-logo">RemCom</a>
-          <nav class="main-menu">
-            <ul>
-              <li>
-                <a href="#">Отзывы</a>
-              </li>
-              <li>
-                <a href="#">FAQ</a>
-              </li>
-              <li>
-                <a href="#">Контакты</a>
-              </li>
-              <li>
-                <a href="#">Наши работы</a>
-              </li>
-            </ul>
-          </nav>
-          <a href="tel:+78128888888" class="header-phone">+7 812 888-88-88</a>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Мой первый проект</title>
+  <link rel="stylesheet" href="style/style.css" />
+</head>
+
+<body>
+
+  <header class="header">
+    <div class="header-inner">
+      <div class="header-wrap">
+        <a href="index.html" class="header-logo">RemCom</a>
+        <nav class="main-menu">
+          <ul>
+            <li>
+              <a href="#">Отзывы</a>
+            </li>
+            <li>
+              <a href="#">FAQ</a>
+            </li>
+            <li>
+              <a href="#">Контакты</a>
+            </li>
+            <li>
+              <a href="#">Наши работы</a>
+            </li>
+          </ul>
+        </nav>
+        <a href="tel:+78128888888" class="header-phone">+7 812 888-88-88</a>
       </div>
-    </header>
+    </div>
+  </header>
 
-    <main>
-      <section class="promo">
-        <div class="promo-inner">
-          <div class="promo-wrap">
-            <div class="promo-info">
-              <h1 class="promo-title">
-                <span>RemCom</span>
-                Ремонт мелкой и крупной бытовой техники в Санкт-Петербурге
-              </h1>
-              <a href="#" class="btn">Оставить заявку</a>
-            </div>
-            <div class="promo-visual">
-
-            </div>
+  <main>
+    <section class="promo">
+      <div class="promo-inner">
+        <div class="promo-wrap">
+          <div class="promo-info">
+            <h1 class="promo-title">
+              <span>RemCom</span>
+              Ремонт мелкой и крупной бытовой техники в Санкт-Петербурге
+            </h1>
+            <a href="#" class="btn">Оставить заявку</a>
+          </div>
+          <div class="promo-visual">
+            <img src="images/promo-imgage.jpg" alt="Мужики варят чифиръ" class="promo-img">
           </div>
         </div>
-      </section>
-      <section class="services">
-        <div class="services-inner">
-
-        </div>
-      </section>
-      <section class="order">
-        <div class="order-inner">
-
-        </div>
-      </section>
-    </main>
-
-    <footer class="footer">
-      <div class="footer-inner">
-        <p class="copyright">Ничего не защищено</p>
       </div>
-    </footer>
+    </section>
+    <section class="services">
+      <div class="services-inner">
+        <h2 class="services-title">Что мы ремонтируем</h2>
+        <ul class="services-list">
+          <li class="services-item">
+            <h3 class="services-caption">Кухонную технику</h3>
+            <p class="services-text">Холодильники, микроволновки,
+              Духовые шкафы, кухонные комбайны и т.д.</p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Смартфоны</h3>
+            <p class="services-text">Смартфоны и планшеты Apple, Samsung,
+              Huawey, Honor, Xiaomi, Oppo и многие другие модели</p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Теле и аудио</h3>
+            <p class="services-text">Современные и не очень телефизоры, акустические системы, в том числе HiFi класса,
+              ресиверы и проигрыватели грампластинок</p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Деревянную мебель</h3>
+            <p class="services-text">Мебель из массива дерева - стулья, табуреты, шкафы, тумбы, секретеры и кабинеты.
+            </p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="order">
+      <div class="order-inner">
+        <h2 class="order-title">Заявка на ремонт</h2>
 
-    <script src="scripts/script.js"></script>
-  </body>
+        <form action="#" class="form">
+          <div class="form-field form-field-half">
+            <label for="name" class="form-label">Имя</label>
+            <input id="name" type="text" class="form-input">
+          </div>
+          <div class="form-field form-field-half">
+            <label for="phone" class="form-label">Телефон</label>
+            <input id="phone" type="text" class="form-input">
+          </div>
+          <div class="form-field">
+            <label for="message" class="form-label">Что ремонтируем?</label>
+            <textarea name="" id="message" class="form-textarea"></textarea>
+          </div>
+          <div class="form-field">
+            <input id="consent" type="checkbox" class="form-checkbox">
+            <label for="consent" class="form-checkbox-text">Даю согласие на обработку персональных данных с соответствии
+              с политикой обработки персональных данных</label>
+          </div>
+          <div class="form-field">
+            <button class="btn btn-full">Отправить</button>
+          </div>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="footer-inner">
+      <div class="footer-wrap">
+        <p class="copyright">Ничего не защищено</p>
+        <ul class="social">
+          <li class="social-item">
+            <a href="#" class="social-link" title="Insta" style="background-image: url(images/icon-insta.svg);"></a>
+          </li>
+          <li class="social-item">
+            <a href="#" class="social-link" title="facebook" style="background-image: url(images/icon-fb.svg);"></a>
+          </li>
+          <li class="social-item">
+            <a href="#" class="social-link" title="telegram" style="background-image: url(images/icon-telega.svg);"></a>
+          </li>
+        </ul>
+      </div>
+
+    </div>
+  </footer>
+
+  <script src="scripts/script.js"></script>
+</body>
+
 </html>
