разметка внутренних страниц, чутка стилизации внутренних страниц, позиционирование шапки сайта, позиционирование абсолютное внутри относительного для подписи поверх изображения

--- a/www/works.html
+++ b/www/works.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ремонтная компания</title>
+  <title>Работы | Ремонтная компания</title>
   <link rel="stylesheet" href="style/style.css" />
 </head>
 
@@ -37,53 +37,13 @@
   </header>
 
   <main>
-    <section class="promo">
-      <div class="promo-inner">
-        <div class="promo-wrap">
-          <div class="promo-info">
-            <h1 class="promo-title">
-              <span>RemCom</span>
-              Ремонт мелкой и крупной бытовой техники в Санкт-Петербурге
-            </h1>
-            <a href="#" class="btn">Оставить заявку</a>
-          </div>
-          <div class="promo-visual">
-            <figure class="promo-figure">
-              <img src="images/promo-imgage.jpg" alt="Мужики варят чифиръ" class="promo-img">
-              <figcaption class="promo-image-caption">Мужики варят чифиръ</figcaption>
-            </figure>
-          </div>
-        </div>
+    <section class="works">
+      <div class="works-inner">
+        <h1 class="works-title">Наши работы</h1>
       </div>
     </section>
-    <section class="services">
-      <div class="services-inner">
-        <h2 class="services-title">Что мы ремонтируем</h2>
-        <ul class="services-list">
-          <li class="services-item">
-            <h3 class="services-caption">Кухонную технику</h3>
-            <p class="services-text">Холодильники, микроволновки,
-              Духовые шкафы, кухонные комбайны и т.д.</p>
-          </li>
-          <li class="services-item">
-            <h3 class="services-caption">Смартфоны</h3>
-            <p class="services-text">Смартфоны и планшеты Apple, Samsung,
-              Huawey, Honor, Xiaomi, Oppo и многие другие модели</p>
-          </li>
-          <li class="services-item">
-            <h3 class="services-caption">Теле и аудио</h3>
-            <p class="services-text">Современные и не очень телефизоры, акустические системы, в том числе HiFi класса,
-              ресиверы и проигрыватели грампластинок</p>
-          </li>
-          <li class="services-item">
-            <h3 class="services-caption">Деревянную мебель</h3>
-            <p class="services-text">Мебель из массива дерева - стулья, табуреты, шкафы, тумбы, секретеры и кабинеты.
-            </p>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <section class="order">
+
+    <section class="order order-separator">
       <div class="order-inner">
         <h2 class="order-title">Заявка на ремонт</h2>
         <form action="#" class="form">
