--- a/www/reviews.html
+++ b/www/reviews.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ремонтная компания</title>
+  <title>Отзывы | Ремонтная компания</title>
   <link rel="stylesheet" href="style/style.css" />
 </head>
 
@@ -37,53 +37,61 @@
   </header>
 
   <main>
-    <section class="promo">
-      <div class="promo-inner">
-        <div class="promo-wrap">
-          <div class="promo-info">
-            <h1 class="promo-title">
-              <span>RemCom</span>
-              Ремонт мелкой и крупной бытовой техники в Санкт-Петербурге
-            </h1>
-            <a href="#" class="btn">Оставить заявку</a>
+    <section class="reviews">
+      <div class="reviews-inner">
+        <h1 class="reviews-title">Отзывы о нашей работе</h1>
+        <div class="reviews-wrap">
+          <div class="reviews-item">
+            <img src="images/ava-panda.jpg" alt="" class="reviews-ava" />
+            <div class="reviews-text">
+              <strong class="reviews-name">Инна</strong>
+              <blockquote class="reviews-quote">
+                “Но внедрение современных методик представляет собой
+                интересный эксперимент проверки вывода текущих активов.
+                Некоторые особенности внутренней политики разоблачены.”
+              </blockquote>
+            </div>
           </div>
-          <div class="promo-visual">
-            <figure class="promo-figure">
-              <img src="images/promo-imgage.jpg" alt="Мужики варят чифиръ" class="promo-img">
-              <figcaption class="promo-image-caption">Мужики варят чифиръ</figcaption>
-            </figure>
+          <div class="reviews-item">
+            <img src="images/ava-jekki.png" alt="" class="reviews-ava" />
+            <div class="reviews-text">
+              <strong class="reviews-name">Джекки</strong>
+              <blockquote class="reviews-quote">
+                “Но внедрение современных методик представляет собой
+                интересный эксперимент проверки”
+              </blockquote>
+            </div>
           </div>
+          <div class="reviews-item">
+            <img src="images/ava-valdo.png" alt="" class="reviews-ava" />
+            <div class="reviews-text">
+              <strong class="reviews-name">Вальдемар</strong>
+              <blockquote class="reviews-quote">
+                “Но внедрение современных методик представляет собой
+                интересный эксперимент проверки вывода текущих активов.
+                Некоторые особенности.”
+              </blockquote>
+            </div>
+          </div>
+          <div class="reviews-item">
+            <img src="images/ava-ira.png" alt="" class="reviews-ava" />
+            <div class="reviews-text">
+              <strong class="reviews-name">Ирина</strong>
+              <blockquote class="reviews-quote">
+                “Но внедрение современных методик представляет собой
+                интересный эксперимент проверки вывода текущих активов.
+                Некоторые особенности внутренней политики разоблачены.”
+              </blockquote>
+            </div>
+          </div>
+        </div>
+        <div class="reviews-btn">
+          <button class="btn j-reviews-btn">Еще отзывы</button>
         </div>
       </div>
     </section>
-    <section class="services">
-      <div class="services-inner">
-        <h2 class="services-title">Что мы ремонтируем</h2>
-        <ul class="services-list">
-          <li class="services-item">
-            <h3 class="services-caption">Кухонную технику</h3>
-            <p class="services-text">Холодильники, микроволновки,
-              Духовые шкафы, кухонные комбайны и т.д.</p>
-          </li>
-          <li class="services-item">
-            <h3 class="services-caption">Смартфоны</h3>
-            <p class="services-text">Смартфоны и планшеты Apple, Samsung,
-              Huawey, Honor, Xiaomi, Oppo и многие другие модели</p>
-          </li>
-          <li class="services-item">
-            <h3 class="services-caption">Теле и аудио</h3>
-            <p class="services-text">Современные и не очень телефизоры, акустические системы, в том числе HiFi класса,
-              ресиверы и проигрыватели грампластинок</p>
-          </li>
-          <li class="services-item">
-            <h3 class="services-caption">Деревянную мебель</h3>
-            <p class="services-text">Мебель из массива дерева - стулья, табуреты, шкафы, тумбы, секретеры и кабинеты.
-            </p>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <section class="order">
+
+    <section class="order order-separator">
       <div class="order-inner">
         <h2 class="order-title">Заявка на ремонт</h2>
         <form action="#" class="form">
