адаптив главной страницы

--- a/www/index.html
+++ b/www/index.html
@@ -45,13 +45,14 @@
               <span>RemCom</span>
               Ремонт мелкой и крупной бытовой техники в Санкт-Петербурге
             </h1>
-            <a href="#" class="btn">Оставить заявку</a>
+            <a href="#" class="btn btn-tablet">Оставить заявку</a>
           </div>
           <div class="promo-visual">
             <figure class="promo-figure">
               <img src="images/promo-imgage.jpg" alt="Мужики варят чифиръ" class="promo-img">
               <figcaption class="promo-image-caption">Мужики варят чифиръ</figcaption>
             </figure>
+            <a href="#" class="btn btn-mobile">Оставить заявку</a>
           </div>
         </div>
       </div>
@@ -117,21 +118,18 @@
 
   <footer class="footer">
     <div class="footer-inner">
-      <div class="footer-wrap">
-        <p class="copyright">Ничего не защищено</p>
-        <ul class="social">
-          <li class="social-item">
-            <a href="#" class="social-link" title="Insta" style="background-image: url(images/icon-insta.svg);"></a>
-          </li>
-          <li class="social-item">
-            <a href="#" class="social-link" title="facebook" style="background-image: url(images/icon-fb.svg);"></a>
-          </li>
-          <li class="social-item">
-            <a href="#" class="social-link" title="telegram" style="background-image: url(images/icon-telega.svg);"></a>
-          </li>
-        </ul>
-      </div>
-
+      <p class="copyright">Ничего не защищено</p>
+      <ul class="social">
+        <li class="social-item">
+          <a href="#" class="social-link" title="Insta" style="background-image: url(images/icon-insta.svg);"></a>
+        </li>
+        <li class="social-item">
+          <a href="#" class="social-link" title="facebook" style="background-image: url(images/icon-fb.svg);"></a>
+        </li>
+        <li class="social-item">
+          <a href="#" class="social-link" title="telegram" style="background-image: url(images/icon-telega.svg);"></a>
+        </li>
+      </ul>
     </div>
   </footer>
 
