добавлена библиотека jQuery

--- a/www/contacts.html
+++ b/www/contacts.html
@@ -40,6 +40,8 @@
     <section class="contacts">
       <div class="contacts-inner">
         <h1 class="contacts-title">Сервисные центры</h1>
+
+        <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт‑Петербург</a><a href="https://yandex.ru/maps/2/saint-petersburg/?feedback=map%2Fedit&feedback-context=map.controls&indoorLevel=1&ll=30.321609%2C59.927971&utm_medium=mapframe&utm_source=maps&z=17.6" style="color:#eee;font-size:12px;position:absolute;top:14px;">Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/?feedback=map%2Fedit&feedback-context=map.controls&indoorLevel=1&ll=30.321609%2C59.927971&z=17.6" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
       </div>
     </section>
     <section class="order order-separator">
