--- a/www/index.html
+++ b/www/index.html
@@ -14,24 +14,24 @@
     <div class="header-inner">
       <div class="header-wrap">
         <a href="index.html" class="header-logo">RemCom</a>
-        <nav class="main-menu">
+        <nav class="main-menu j-main-menu">
           <ul>
             <li>
-              <a href="reviews.html">Отзывы</a>
+              <a href="#">Отзывы</a>
             </li>
             <li>
-              <a href="faq.html">FAQ</a>
+              <a href="#">FAQ</a>
             </li>
             <li>
-              <a href="contacts.html">Контакты</a>
+              <a href="#">Контакты</a>
             </li>
             <li>
-              <a href="works.html">Наши работы</a>
+              <a href="#">Наши работы</a>
             </li>
           </ul>
         </nav>
         <a href="tel:+78128888888" class="header-phone">+7 812 888-88-88</a>
-        <button class="burger">menu</button>
+        <button class="burger j-burger">menu</button>
       </div>
     </div>
   </header>
@@ -81,6 +81,107 @@
             <p class="services-text">Мебель из массива дерева - стулья, табуреты, шкафы, тумбы, секретеры и кабинеты.
             </p>
           </li>
+          <li class="services-item">
+            <h3 class="services-caption">Кухонную технику</h3>
+            <p class="services-text">Холодильники, микроволновки,
+              Духовые шкафы, кухонные комбайны и т.д.</p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Смартфоны</h3>
+            <p class="services-text">Смартфоны и планшеты Apple, Samsung,
+              Huawey, Honor, Xiaomi, Oppo и многие другие модели</p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Теле и аудио</h3>
+            <p class="services-text">Современные и не очень телефизоры, акустические системы, в том числе HiFi класса,
+              ресиверы и проигрыватели грампластинок</p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Деревянную мебель</h3>
+            <p class="services-text">Мебель из массива дерева - стулья, табуреты, шкафы, тумбы, секретеры и кабинеты.
+            </p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Кухонную технику</h3>
+            <p class="services-text">Холодильники, микроволновки,
+              Духовые шкафы, кухонные комбайны и т.д.</p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Смартфоны</h3>
+            <p class="services-text">Смартфоны и планшеты Apple, Samsung,
+              Huawey, Honor, Xiaomi, Oppo и многие другие модели</p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Теле и аудио</h3>
+            <p class="services-text">Современные и не очень телефизоры, акустические системы, в том числе HiFi класса,
+              ресиверы и проигрыватели грампластинок</p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Деревянную мебель</h3>
+            <p class="services-text">Мебель из массива дерева - стулья, табуреты, шкафы, тумбы, секретеры и кабинеты.
+            </p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Кухонную технику</h3>
+            <p class="services-text">Холодильники, микроволновки,
+              Духовые шкафы, кухонные комбайны и т.д.</p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Смартфоны</h3>
+            <p class="services-text">Смартфоны и планшеты Apple, Samsung,
+              Huawey, Honor, Xiaomi, Oppo и многие другие модели</p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Теле и аудио</h3>
+            <p class="services-text">Современные и не очень телефизоры, акустические системы, в том числе HiFi класса,
+              ресиверы и проигрыватели грампластинок</p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Деревянную мебель</h3>
+            <p class="services-text">Мебель из массива дерева - стулья, табуреты, шкафы, тумбы, секретеры и кабинеты.
+            </p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Кухонную технику</h3>
+            <p class="services-text">Холодильники, микроволновки,
+              Духовые шкафы, кухонные комбайны и т.д.</p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Смартфоны</h3>
+            <p class="services-text">Смартфоны и планшеты Apple, Samsung,
+              Huawey, Honor, Xiaomi, Oppo и многие другие модели</p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Теле и аудио</h3>
+            <p class="services-text">Современные и не очень телефизоры, акустические системы, в том числе HiFi класса,
+              ресиверы и проигрыватели грампластинок</p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Деревянную мебель</h3>
+            <p class="services-text">Мебель из массива дерева - стулья, табуреты, шкафы, тумбы, секретеры и кабинеты.
+            </p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Кухонную технику</h3>
+            <p class="services-text">Холодильники, микроволновки,
+              Духовые шкафы, кухонные комбайны и т.д.</p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Смартфоны</h3>
+            <p class="services-text">Смартфоны и планшеты Apple, Samsung,
+              Huawey, Honor, Xiaomi, Oppo и многие другие модели</p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Теле и аудио</h3>
+            <p class="services-text">Современные и не очень телефизоры, акустические системы, в том числе HiFi класса,
+              ресиверы и проигрыватели грампластинок</p>
+          </li>
+          <li class="services-item">
+            <h3 class="services-caption">Деревянную мебель</h3>
+            <p class="services-text">Мебель из массива дерева - стулья, табуреты, шкафы, тумбы, секретеры и кабинеты.
+            </p>
+          </li>
+
         </ul>
       </div>
     </section>
@@ -133,6 +234,7 @@
     </div>
   </footer>
 
+  <script src="scripts/jquery-3.6.4.min.js"></script>
   <script src="scripts/script.js"></script>
 </body>
 
