аккордионы, табы, фильтрация

--- a/www/contacts.html
+++ b/www/contacts.html
@@ -14,7 +14,7 @@
     <div class="header-inner">
       <div class="header-wrap">
         <a href="index.html" class="header-logo">RemCom</a>
-        <nav class="main-menu">
+        <nav class="main-menu j-main-menu">
           <ul>
             <li>
               <a href="reviews.html">Отзывы</a>
@@ -23,7 +23,7 @@
               <a href="faq.html">FAQ</a>
             </li>
             <li>
-              <a href="contacts.html">Контакты</a>
+              <a href="contacts.html" class="active">Контакты</a>
             </li>
             <li>
               <a href="works.html">Наши работы</a>
@@ -31,7 +31,7 @@
           </ul>
         </nav>
         <a href="tel:+78128888888" class="header-phone">+7 812 888-88-88</a>
-        <button class="burger">menu</button>
+        <button class="burger j-burger">menu</button>
       </div>
     </div>
   </header>
@@ -41,9 +41,33 @@
       <div class="contacts-inner">
         <h1 class="contacts-title">Сервисные центры</h1>
 
-        <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт‑Петербург</a><a href="https://yandex.ru/maps/2/saint-petersburg/?feedback=map%2Fedit&feedback-context=map.controls&indoorLevel=1&ll=30.321609%2C59.927971&utm_medium=mapframe&utm_source=maps&z=17.6" style="color:#eee;font-size:12px;position:absolute;top:14px;">Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/?feedback=map%2Fedit&feedback-context=map.controls&indoorLevel=1&ll=30.321609%2C59.927971&z=17.6" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+        <ul class="filter">
+          <li class="filter-item">
+            <a href="#" class="filter-link active j-contacts-link">Санкт-Петербург</a>
+          </li>
+          <li class="filter-item">
+            <a href="#" class="filter-link j-contacts-link">Москва</a>
+          </li>
+          <li class="filter-item">
+            <a href="#" class="filter-link j-contacts-link">Екатеринбург</a>
+          </li>
+        </ul>
+
+        <div class="contacts-item j-contacts-item active">
+          Санкт‑Петербург
+          <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт‑Петербург</a><a href="https://yandex.ru/maps/2/saint-petersburg/?feedback=map%2Fedit&feedback-context=map.controls&indoorLevel=1&ll=30.321609%2C59.927971&utm_medium=mapframe&utm_source=maps&z=17.6" style="color:#eee;font-size:12px;position:absolute;top:14px;">Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/?feedback=map%2Fedit&feedback-context=map.controls&indoorLevel=1&ll=30.321609%2C59.927971&z=17.6" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+        </div>
+        <div class="contacts-item j-contacts-item">
+          Москва
+        </div>
+        <div class="contacts-item j-contacts-item">
+          Екатеринбург
+        </div>
+
+
       </div>
     </section>
+
     <section class="order order-separator">
       <div class="order-inner">
         <h2 class="order-title">Заявка на ремонт</h2>
@@ -96,6 +120,7 @@
     </div>
   </footer>
 
+  <script src="scripts/jquery-3.6.4.min.js"></script>
   <script src="scripts/script.js"></script>
 </body>
 
