--- a/www/faq.html
+++ b/www/faq.html
@@ -14,13 +14,13 @@
     <div class="header-inner">
       <div class="header-wrap">
         <a href="index.html" class="header-logo">RemCom</a>
-        <nav class="main-menu">
+        <nav class="main-menu j-main-menu">
           <ul>
             <li>
               <a href="reviews.html">Отзывы</a>
             </li>
             <li>
-              <a href="faq.html">FAQ</a>
+              <a href="faq.html" class="active">FAQ</a>
             </li>
             <li>
               <a href="contacts.html">Контакты</a>
@@ -31,7 +31,7 @@
           </ul>
         </nav>
         <a href="tel:+78128888888" class="header-phone">+7 812 888-88-88</a>
-        <button class="burger">menu</button>
+        <button class="burger j-burger">menu</button>
       </div>
     </div>
   </header>
@@ -40,6 +40,40 @@
     <section class="faq">
       <div class="faq-inner">
         <h1 class="faq-title">Часто задаваемые вопросы</h1>
+
+        <div class="accordion">
+          <button class="accordion-btn j-accordion-btn">Как можно оплатить услуги ремонта?</button>
+          <div class="accordion-answear">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo libero, officia velit odit, labore at nisi et delectus incidunt consequatur hic natus? At, quasi? Praesentium at laudantium natus id numquam!</p>
+          </div>
+        </div>
+
+        <div class="accordion">
+          <button class="accordion-btn j-accordion-btn">Какую гарантию вы даете на ремонт устройств?</button>
+          <div class="accordion-answear">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo libero, officia velit odit, labore at nisi et delectus incidunt consequatur hic natus? At, quasi? Praesentium at laudantium natus id numquam!</p>
+          </div>
+        </div>
+
+        <div class="accordion">
+          <button class="accordion-btn j-accordion-btn">Можно ли попросить мастера станцевать лизгинку?</button>
+          <div class="accordion-answear">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo libero, officia velit odit, labore at nisi et delectus incidunt consequatur hic natus? At, quasi? Praesentium at laudantium natus id numquam!</p>
+          </div>
+        </div>
+
+        <div class="accordion">
+          <button class="accordion-btn j-accordion-btn">Как можно оплатить услуги ремонта?</button>
+          <div class="accordion-answear">
+            <p>
+              Принимая во внимание показатели успешности, реализация намеченных плановых заданий является качественно новой ступенью распределения внутренних резервов и ресурсов. В частности, перспективное планирование в значительной степени обусловливает важность укрепления моральных ценностей. Имеется спорная точка зрения, гласящая примерно следующее: независимые государства представлены в исключительно положительном свете. Сложно сказать, почему активно развивающиеся страны третьего мира, вне зависимости от их уровня, должны быть разоблачены.
+            </p>
+            <p>
+              Учитывая ключевые сценарии поведения, понимание сути ресурсосберегающих технологий требует определения и уточнения модели развития. Также как высокое качество позиционных исследований требует анализа поставленных обществом задач. А ещё интерактивные прототипы будут призваны к ответу.
+            </p>
+          </div>
+        </div>
+
       </div>
     </section>
 
@@ -95,6 +129,7 @@
     </div>
   </footer>
 
+  <script src="scripts/jquery-3.6.4.min.js"></script>
   <script src="scripts/script.js"></script>
 </body>
 
