--- a/www/index.html
+++ b/www/index.html
@@ -17,16 +17,16 @@
         <nav class="main-menu j-main-menu">
           <ul>
             <li>
-              <a href="#">Отзывы</a>
+              <a href="reviews.html" >Отзывы</a>
             </li>
             <li>
-              <a href="#">FAQ</a>
+              <a href="faq.html">FAQ</a>
             </li>
             <li>
-              <a href="#">Контакты</a>
+              <a href="contacts.html">Контакты</a>
             </li>
             <li>
-              <a href="#">Наши работы</a>
+              <a href="works.html">Наши работы</a>
             </li>
           </ul>
         </nav>
