--- a/www/reviews.html
+++ b/www/reviews.html
@@ -14,10 +14,10 @@
     <div class="header-inner">
       <div class="header-wrap">
         <a href="index.html" class="header-logo">RemCom</a>
-        <nav class="main-menu">
+        <nav class="main-menu j-main-menu">
           <ul>
             <li>
-              <a href="reviews.html">Отзывы</a>
+              <a href="reviews.html" class="active">Отзывы</a>
             </li>
             <li>
               <a href="faq.html">FAQ</a>
@@ -31,7 +31,7 @@
           </ul>
         </nav>
         <a href="tel:+78128888888" class="header-phone">+7 812 888-88-88</a>
-        <button class="burger">menu</button>
+        <button class="burger j-burger">menu</button>
       </div>
     </div>
   </header>
@@ -143,6 +143,7 @@
     </div>
   </footer>
 
+  <script src="scripts/jquery-3.6.4.min.js"></script>
   <script src="scripts/script.js"></script>
 </body>
 
