ajax запрос отзывов

--- a/www/reviews.html
+++ b/www/reviews.html
@@ -40,7 +40,7 @@
     <section class="reviews">
       <div class="reviews-inner">
         <h1 class="reviews-title">Отзывы о нашей работе</h1>
-        <div class="reviews-wrap">
+        <div class="reviews-wrap j-reviews-wrap">
           <div class="reviews-item">
             <img src="images/ava-panda.jpg" alt="" class="reviews-ava" />
             <div class="reviews-text">
@@ -84,6 +84,7 @@
               </blockquote>
             </div>
           </div>
+
         </div>
         <div class="reviews-btn">
           <button class="btn j-reviews-btn">Еще отзывы</button>
